testsuite/tests/properties/invalid_predicate_error/no_such_param/test.lkt
from common import Example

@abstract
class FooNode implements Node[FooNode] {
    @predicate_error("msg: $p")
    fun pred(n: Example): Bool = false
}
